force-app/main/default/objects/MPOrderCondition__c/MPOrderCondition__c.object-meta.xml
<CustomObject>
    <label>Condiciones de Pedido</label>
    <nameField>
        <displayFormat>OC{00000}</displayFormat>
        <label>Order Condition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Condiciones de Pedidos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>