force-app/main/default/objects/MPOrderCondition__c/fields/MPAdjustment__c.field-meta.xml
<CustomField>
    <fullName>MPAdjustment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tipo de ajuste</label>
    <referenceTo>MPAdjustment__c</referenceTo>
    <relationshipLabel>Condiciones de Pedidos</relationshipLabel>
    <relationshipName>Order_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>