force-app/main/default/objects/MPOrderCondition__c/fields/MPCalculationRule__c.field-meta.xml
<CustomField>
    <fullName>MPCalculationRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Norma de cálculo</label>
    <referenceTo>MPCalculationRule__c</referenceTo>
    <relationshipLabel>Condiciones de Pedidos</relationshipLabel>
    <relationshipName>Order_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>