force-app/main/default/objects/MPOrderCondition__c/fields/MPConditionClass__c.field-meta.xml
<CustomField>
    <fullName>MPConditionClass__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clase de Condición</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Condiciones de Pedidos</relationshipLabel>
    <relationshipName>Order_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>