force-app/main/default/objects/MPOrderCondition__c/fields/MPEndDate__c.field-meta.xml
<CustomField>
    <fullName>MPEndDate__c</fullName>
    <label>Fecha fin</label>
    <type>Date</type>
</CustomField>