force-app/main/default/objects/MPOrderCondition__c/fields/MPExternalPurpose__c.field-meta.xml
<CustomField>
    <fullName>MPExternalPurpose__c</fullName>
    <label>Propósito Externo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>