force-app/main/default/objects/MPOrderCondition__c/fields/MPFinalVolume__c.field-meta.xml
<CustomField>
    <fullName>MPFinalVolume__c</fullName>
    <label>Volumen final</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>