force-app/main/default/objects/MPOrderCondition__c/fields/MPOrder__c.field-meta.xml
<CustomField>
    <fullName>MPOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pedido</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Condiciones de Pedidos</relationshipLabel>
    <relationshipName>Order_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>