force-app/main/default/objects/MPOrderCondition__c/fields/MPStartDate__c.field-meta.xml
<CustomField>
    <fullName>MPStartDate__c</fullName>
    <label>Fecha inicio</label>
    <type>Date</type>
</CustomField>