force-app/main/default/objects/MPOrderCondition__c/fields/MPTimeFrequency__c.field-meta.xml
<CustomField>
    <fullName>MPTimeFrequency__c</fullName>
    <label>Frecuencia</label>
    <length>50</length>
    <type>Text</type>
</CustomField>