force-app/main/default/objects/MPOrderCondition__c/fields/MPVolumenValue__c.field-meta.xml
<CustomField>
    <fullName>MPVolumenValue__c</fullName>
    <label>Valor de volumen</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>